modules/gdscript/tests/scripts/analyzer/errors/extend_non_gdscript_nested.gd
class Foo extends RefCounted.Bar:
	pass

func test():
	print('not ok')
